@@ -40,6 +40,7 @@ static char *programs[] = {
   "endmodel",
   "enhance",
   "eraser",
+  "etomo",
   "excise",
   "extposition",
   "extractmagrad",
@@ -59,8 +60,9 @@ static char *programs[] = {
   "findsection",
   "findwarp",
   "finishjoin",
+  "fitpatches",
   "fixmont",
-  "frommrc",
+  "flattenwarp",
   "genhstplt",
   "header",
   "howflared",
@@ -71,7 +73,6 @@ static char *programs[] = {
   "imod2rib",
   "imod2vrml",
   "imodauto",
-  "imodcmopp",
   "imodcurvature",
   "imodenv",
   "imodexplode",
@@ -100,7 +101,6 @@ static char *programs[] = {
   "mrc2tif",
   "mrcbyte",
   "mrctaper",
-  "mrcv",
   "mrcx",
   "mtdetect",
   "mtffilter",
@@ -143,6 +143,7 @@ static char *programs[] = {
   "sirtsetup",
   "smoothsurf",
   "solvematch",
+  "sortbeadsurfs",
   "splitcombine",
   "splitcorrection",
   "splitmrc",
@@ -162,15 +163,15 @@ static char *programs[] = {
   "tomopieces",
   "tomopitch",
   "tomostitch",
-  "tomrc",
   "transferfid",
   "trimvol",
+  "uitestadoc",
+  "uitestaxisadoc",
   "uitest",
   "vmstocsh",
   "vmstopy",
   "warpvol",
   "wmod2imod",
-  "xcorr",
   "xcorrstack",
   "xf2rotmagstr",
   "xfalign",
